<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flecha_atras_24"
                android:layout_marginEnd="16dp"
                android:layout_gravity="start" />
            <ImageView
                android:id="@+id/icono_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_group_24"
                android:layout_gravity="start" />
            <TextView
                android:id="@+id/solicitud_contacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_agregar_contacto"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"

                android:layout_marginStart="16dp"
                android:layout_gravity="start" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/correo_contacto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:inputType="text"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="22dp"
                android:hint="@string/txt_correo_contacto"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_agregar_contacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/btn_enviarinvitacion" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>