<?xml version="1.0" encoding="utf-8"?>
<!--FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.localizatech.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_family_restroom_24_purpura"
                />
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="John Doe"
                />
            <TextView
                android:id="@+id/user_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bio"
                android:textSize="18sp"
                android:layout_margin="16dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
<android:fontFamily="@font/roboto_regular">

</FrameLayout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flecha_atras_24"
            android:layout_marginEnd="16dp"
            android:layout_gravity="start" />
        <ImageView
            android:id="@+id/icono_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_perfil_24"
            android:layout_gravity="start" />
        <TextView
            android:id="@+id/perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_menu_miperfil"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"

            android:layout_marginStart="16dp"
            android:layout_gravity="start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_family_restroom_24_purpura"
                        android:layout_marginEnd="16dp"
                        android:layout_gravity="center_vertical" />
                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nombre de usuario"
                        android:textSize="16sp"
                        android:textColor="#000000"

                        android:layout_gravity="center_vertical" />

                    <ImageButton
                        android:id="@+id/edit_button_name"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/txt_editar"
                        android:src="@drawable/ic_editar_24" />
                </LinearLayout>


                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ejemplo@gmail.com"
                    android:textSize="12sp"
                    android:layout_marginLeft="40dp"/>
                <TextView
                    android:id="@+id/user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tipo de usuario: Premium"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:layout_marginLeft="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/mis_contactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_invitados"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"

            android:layout_marginStart="16dp"
            android:layout_gravity="start" />

    </LinearLayout>
</LinearLayout>

